--- a/style.css
+++ b/style.css
@@ -6,12 +6,21 @@
 
 body {
     font-family: Helvetica, Arial, sans-serif;
+    color: #fff;
+    overflow-x: hidden;
+}
+
+.home-page {
     background-image: url('assets/bg.PNG');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    color: #fff;
-    overflow-x: hidden;
+}
+
+
+.about-page,
+.mission-page {
+    background: #3a261c; 
 }
 
 body::before {
@@ -112,7 +121,7 @@ nav a:hover {
 
 .image-frame img {
     width: 100%;
-    height: auto;      
+    height: auto;
     display: block;
 }
 
@@ -125,7 +134,7 @@ nav a:hover {
     width: 100%;
     height: auto;
     margin-bottom: 25px;
-    margin-top: -80px; 
+    margin-top: -80px;
 }
 
 
@@ -196,11 +205,11 @@ nav a:hover {
     }
 
     nav ul {
-        display: none; 
+        display: none;
     }
 
     .search-box input {
-        display: none; 
+        display: none;
     }
 
     .hero-title {
@@ -261,14 +270,14 @@ nav a:hover {
     font-size: 22px;
     font-weight: 600;
     color: #333;
-    margin-bottom: 8px; 
+    margin-bottom: 8px;
 }
 
 .about-main-heading {
     font-size: 36px;
     font-weight: 700;
     color: #111;
-    margin-bottom: 12px; 
+    margin-bottom: 12px;
 }
 
 .about-text {
@@ -278,7 +287,7 @@ nav a:hover {
     max-width: 550px;
 }
 
-h3{
+h3 {
     margin-bottom: 60px;
     font-weight: normal;
 }
@@ -295,3 +304,109 @@ h3{
     }
 }
 
+
+.mission-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 140px 60px;
+    background: #3a261c;
+    color: white;
+}
+
+.mission-left {
+    width: 45%;
+}
+
+.mission-title {
+    font-size: 48px;
+    margin-bottom: 25px;
+}
+
+.mission-subtitle {
+    font-size: 14px;
+    opacity: 0.8;
+    margin-bottom: 60px;
+}
+
+.mission-item {
+    margin-bottom: 60px;
+}
+
+.mission-item h2 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.mission-item p {
+    font-size: 13px;
+    opacity: 0.8;
+}
+
+
+
+
+.mission-right {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.mission-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 35px;
+}
+
+
+.mission-grid img:nth-child(1),
+.mission-grid img:nth-child(4) {
+    width: 100%;
+    height: 330px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.mission-grid img:nth-child(2),
+.mission-grid img:nth-child(3) {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.mission-grid img:nth-child(4) {
+    margin-top: -130px; 
+}
+
+
+
+@media (max-width: 992px) {
+    .mission-section {
+        flex-direction: column;
+        padding: 120px 30px;
+    }
+
+    .mission-left,
+    .mission-right {
+        width: 100%;
+        text-align: left;
+    }
+
+    .mission-grid {
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 600px) {
+    .mission-title {
+        font-size: 36px;
+    }
+
+    .mission-grid {
+        grid-template-columns: 1fr;
+    }
+}
